--- a/frontend/application_form/index.html
+++ b/frontend/application_form/index.html
@@ -288,6 +288,16 @@
                 photo: previewImg.src.startsWith('data:image') ? previewImg.src : '',
                 casteCategory: document.querySelector('input[name="caste"]:checked') ? document.querySelector('input[name="caste"]:checked').value : '',
                 course_fees: document.getElementById('course_fees').value,
+                payment_1_rs: document.getElementById('payment_1_rs').value,
+                payment_1_receipt: document.getElementById('payment_1_receipt').value,
+                payment_1_date: document.getElementById('payment_1_date').value,
+                payment_2_rs: document.getElementById('payment_2_rs').value,
+                payment_2_receipt: document.getElementById('payment_2_receipt').value,
+                payment_2_date: document.getElementById('payment_2_date').value,
+                payment_3_rs: document.getElementById('payment_3_rs').value,
+                payment_3_receipt: document.getElementById('payment_3_receipt').value,
+                payment_3_date: document.getElementById('payment_3_date').value,
+                placement_details: document.getElementById('placement_details').value,
                 education: [
                     {
                         course: document.querySelector('[name="edu_course"]').value,
